# Canvas-cURL

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  save.py  scrapy.cfg
CanvasCURL/: items.py  middlewares.py  pipelines.py  settings.py
CanvasCURL/spiders/: canvas.py  canvas_files.py
