[tool.poetry]
name = "canvas-curl"
version = "0.1.0"
description = ""
authors = ["Charles de Freitas <me@chasbob.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
Scrapy = "^2.3.0"
fire = "^0.3.1"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
